# hack-the-system-v3-2021

./: .gitignore  README.md  main.cpp
cpp getter/: CMakeLists.txt  main.cpp
cpp getter - mysql/: CMakeLists.txt  main - Copy.cpp  main.cpp
db/: defaultdb_hotel.sql  defaultdb_rates.sql  defaultdb_routines.sql
express/: package.json
